--- a/src/styles/style/desktopOS.sass
+++ b/src/styles/style/desktopOS.sass
@@ -1,17 +1,22 @@
 @import "../fonts/fonts"
+@import "./main"
 
 .desktopOS
     & .wrapperOS
         padding: 95px 0 74px 0
     & h1
-        @include Roboto300
+        // @include Roboto300
+        font-family: Roboto
+        font-weight: 300
         @include adaptiv-font(42, 21)
         line-height: 52px
         text-align: center
-        color: #FAFAFA
+        color: $cream
         z-index: 1
     & h3
-        @include Roboto400
+        // @include Roboto400
+        font-family: Roboto
+        font-weight: 400
         @include adaptiv-font(18, 9)
         line-height: 28px
         text-align: center
@@ -22,7 +27,9 @@
         display: flex
         align-items: center
         cursor: pointer
-        @include Roboto400
+        // @include Roboto400
+        font-family: Roboto
+        font-weight: 400
         @include adaptiv-font(14, 7)
         line-height: 20px
         color: #887DFF
@@ -38,11 +45,13 @@
     & .downloadBtn
         cursor: pointer
         margin-top: 56px
-        @include Roboto700
+        // @include Roboto700
+        font-family: Roboto
+        font-weight: 700
         @include adaptiv-font(16, 8)
         line-height: 22px
         color: #2F2F3D
-        background: #B9E01E
+        background: $yellow
         border-radius: 4px
         padding: 13px 64px
         z-index: 1
