--- a/src/styles/style/exploreFeatures.sass
+++ b/src/styles/style/exploreFeatures.sass
@@ -1,4 +1,5 @@
 @import "../fonts/fonts"
+@import "./main"
 
 .exFeature
     & .cart
@@ -6,12 +7,16 @@
         border: 1px solid #25252E
         border-radius: 8px
         & h1
-            @include Roboto300
+            // @include Roboto300
+            font-family: Roboto
+            font-weight: 300
             @include adaptiv-font(38, 19)
             line-height: 44px
             color: #ECECEC
         & p
-            @include Roboto400
+            // @include Roboto400
+            font-family: Roboto
+            font-weight: 400
             @include adaptiv-font(18, 9)
             line-height: 28px
             color: #A3A3B1
@@ -21,12 +26,14 @@
             max-width: 425px
             width: 100%
         & a
-            @include Roboto700
+            // @include Roboto700
+            font-family: Roboto
+            font-weight: 700
             @include adaptiv-font(16, 8)
             line-height: 24px
-            color: #5C53F3
+            color: $blue
             padding: 12px 42px 12px 32px
-            border: 1px solid #5C53F3
+            border: 1px solid $blue
             border-radius: 4px
             &:hover
                 color: #837ef1
