--- a/src/styles/style/footer.sass
+++ b/src/styles/style/footer.sass
@@ -1,9 +1,12 @@
 @import "../fonts/fonts"
+@import "./main"
 
 .section
     min-height: 132px
     & a
-        @include Roboto400
+        // @include Roboto400
+        font-family: Roboto
+        font-weight: 400
         @include adaptiv-font(14, 7)
         line-height: 20px
         color: #A3A3B1
@@ -13,7 +16,9 @@
             color: #464753
             transition: .5s
     & div:first-child a
-        @include Roboto700
+        // @include Roboto700
+        font-family: Roboto
+        font-weight: 700
         @include adaptiv-font(14, 7)
         line-height: 20px
         color: #ECECEC
@@ -24,10 +29,12 @@
 
 .formContact
     & h4
-        @include Roboto700
+        // @include Roboto700
+        font-family: Roboto
+        font-weight: 700
         @include adaptiv-font(14, 7)
         line-height: 20px
-        color: #FAFAFA
+        color: $cream
     & input
         width: 100%
         background: #25252E
@@ -36,17 +43,21 @@
         outline: none
         color: white
         &::placeholder
-            @include Roboto400
+            // @include Roboto400
+            font-family: Roboto
+            font-weight: 400
             @include adaptiv-font(18, 9)
             line-height: 28px
             color: #71717E
     & button
-        @include Roboto700
+        // @include Roboto700
+        font-family: Roboto
+        font-weight: 700
         @include adaptiv-font(16, 8)
         line-height: 24px
         display: flex
         align-items: center
-        color: #FAFAFA
+        color: $cream
         background: #4D41CB
         border-radius: 0px 4px 4px 0px
         padding: 13px 16px
@@ -58,7 +69,9 @@
         height: 32px
         margin: 8px 16px 8px 8px
     & p
-        @include Roboto700
+        // @include Roboto700
+        font-family: Roboto
+        font-weight: 700
         @include adaptiv-font(14, 7)
         line-height: 20px
         color: #464753
