--- a/src/styles/style/frame.sass
+++ b/src/styles/style/frame.sass
@@ -1,4 +1,5 @@
 @import "../fonts/fonts"
+@import "./main"
 
 .frame
     padding: 144px 0 132px 0
@@ -7,7 +8,9 @@
         max-width: 605px
         max-height: 96px
         margin: 0 auto
-        @include Roboto400
+        // @include Roboto400
+        font-family: Roboto
+        font-weight: 400
         @include adaptiv-font(24, 12)
         line-height: 32px
         text-align: center
@@ -18,10 +21,14 @@
             width: 64px
             height: 64px
         & p
-            @include Roboto700
+            // @include Roboto700
+            font-family: Roboto
+            font-weight: 700
             @include adaptiv-font(18, 9)
             line-height: 28px
             color: #A3A3B1
             margin-left: 32px
         & p:last-child
-            @include Roboto500
+            // @include Roboto500
+            font-family: Roboto
+            font-weight: 500
