--- a/src/styles/style/header.sass
+++ b/src/styles/style/header.sass
@@ -1,4 +1,5 @@
 @import "../fonts/fonts"
+@import "./main"
 
 .header
     & .tabs div
@@ -11,14 +12,16 @@
         &:hover
             border-bottom: 1px solid white
         & a
-            @include Roboto400
+            // @include Roboto400
+            font-family: Roboto
+            font-weight: 400
             @include adaptiv-font(14, 6)
             line-height: 20px
-            color: #FAFAFA
+            color: $cream
     & .productList, .resourcesList
         visibility: hidden
         & p
-            color: #5C53F3
+            color: $blue
             margin-top: 8px
             &:hover
                 color: #847eee
@@ -30,7 +33,7 @@
         padding: 12px 64px
         width: 209px
         height: 48px
-        background: #5C53F3
+        background: $blue
         border-radius: 4px
         cursor: pointer
         &:hover
@@ -39,7 +42,9 @@
         & a
             width: 81px
             height: 24px
-            @include Roboto700
+            // @include Roboto700
+            font-family: Roboto
+            font-weight: 700
             @include adaptiv-font(16, 8)
             line-height: 24px
-            color: #FAFAFA
+            color: $cream
