--- a/src/styles/style/main.sass
+++ b/src/styles/style/main.sass
@@ -1,3 +1,17 @@
+$maxWidth: 2560
+@mixin adaptiv-font($pcSize, $mobSize)
+    $addSize: $pcSize - $mobSize
+    $addMobSize: $addSize + $addSize * 0.7
+    @media (max-width: 767px)
+        font-size: calc( #{$mobSize + px} + #{$addMobSize} * ((100vw - 320px) / #{$maxWidth}))
+    @media (min-width: 767px)
+        font-size: calc( #{$mobSize + px} + #{$addSize} * (100vw / #{$maxWidth}))
+
+$blue: #5C53F3
+$lightBlue: #887DFF
+$yellow: #B9E01E
+$cream: #FAFAFA
+
 *
     padding: 0
     margin: 0
