--- a/src/styles/style/pricingPlans.sass
+++ b/src/styles/style/pricingPlans.sass
@@ -1,22 +1,29 @@
 @import "../fonts/fonts"
+@import "./main"
 
 .pricingPlans
     padding: 96px 48px 128px 48px
     & h1
-        @include Roboto300
+        // @include Roboto300
+        font-family: Roboto
+        font-weight: 300
         @include adaptiv-font(42, 21)
         line-height: 52px
         text-align: center
         color: #ECECEC
     & h3
-        @include Roboto400
+        // @include Roboto400
+        font-family: Roboto
+        font-weight: 400
         @include adaptiv-font(22, 11)
         line-height: 32px
         text-align: center
         color: #A3A3B1
         margin: 16px 0 32px 0
     & span
-        @include Roboto400
+        // @include Roboto400
+        font-family: Roboto
+        font-weight: 400
         @include adaptiv-font(14, 7)
         line-height: 20px
         text-align: center
@@ -59,38 +66,50 @@
 .packageServices
     & .classTop
         & p
-            @include Roboto400
+            // @include Roboto400
+            font-family: Roboto
+            font-weight: 400
             @include adaptiv-font(24, 12)
             line-height: 32px
             color: #A3A3B1
         & .price
-            @include Roboto400
+            // @include Roboto400
+            font-family: Roboto
+            font-weight: 400
             @include adaptiv-font(32, 16)
             line-height: 40px
-            color: #FAFAFA
+            color: $cream
         & .yearOrMonth
-            @include Roboto400
+            // @include Roboto400
+            font-family: Roboto
+            font-weight: 400
             @include adaptiv-font(18, 9)
             line-height: 28px
             color: #A3A3B1
     & .classBottom
         & p
-            @include Roboto400
+            // @include Roboto400
+            font-family: Roboto
+            font-weight: 400
             @include adaptiv-font(18, 9)
             line-height: 28px
             // color: #ECECEC
         & span
-            @include Roboto400
+            // @include Roboto400
+            font-family: Roboto
+            font-weight: 400
             @include adaptiv-font(18, 9)
             line-height: 28px
             color: #C8C4FF
         & button
-            @include Roboto700
+            // @include Roboto700
+            font-family: Roboto
+            font-weight: 700
             @include adaptiv-font(16, 8)
             line-height: 24px
-            color: #5C53F3
+            color: $blue
             padding: 12px 107.5px
-            border: 1px solid #5C53F3
+            border: 1px solid $blue
             border-radius: 4px
             margin: 14px 0 0 0
             &:hover
