--- a/src/styles/style/roadmap.sass
+++ b/src/styles/style/roadmap.sass
@@ -1,4 +1,5 @@
 @import "../fonts/fonts"
+@import "./main"
 
 .roadmap
     padding: 64px
@@ -28,14 +29,14 @@
         font-weight: 400
         font-size: 18px
         line-height: 28px
-        color: #FAFAFA
+        color: $cream
     & h3
         font-family: 'Roboto'
         font-style: normal
         font-weight: 400
         font-size: 32px
         line-height: 40px
-        color: #FAFAFA
+        color: $cream
         margin: 16px 0
     & img
         width: 50px
@@ -58,7 +59,7 @@
             font-weight: 400
             font-size: 24px
             line-height: 32px
-            color: #FAFAFA
+            color: $cream
             align-self: center
         & input
             background: #25252E
@@ -74,7 +75,7 @@
             line-height: 24px
             display: flex
             align-items: center
-            color: #FAFAFA
+            color: $cream
             padding: 10px 15px
             background: #4D41CB
             border-radius: 0px 4px 4px 0px
