--- a/src/styles/style/textCol.sass
+++ b/src/styles/style/textCol.sass
@@ -1,4 +1,5 @@
 @import "../fonts/fonts"
+@import "./main"
 
 .textCol
     padding: 64px
@@ -17,7 +18,7 @@
         font-weight: 400
         font-size: 32px
         line-height: 40px
-        color: #FAFAFA
+        color: $cream
         padding: 16px 0
     & p
         font-family: 'Roboto'
