--- a/src/styles/style/desktop.sass
+++ b/src/styles/style/desktop.sass
@@ -2,16 +2,20 @@
 @import "./main"
 
 .desktop
+    max-width: 1280px
+    margin: 0 auto
     & .img
+        display: flex
+        justify-content: center
+        align-items: center
         margin: 64px 0
         filter: drop-shadow(0px 0px 58px rgba(92, 83, 243, 0.75))
-        & .bxImg
-            background: linear-gradient(208.2deg, #43434A 3.37%, rgba(28, 28, 35, 0) 93.73%), #151515   
-            box-shadow: 0px 80px 150px rgba(0, 0, 0, 0.5)
-            border-radius: 36px
+    & .bxImg
+        background: linear-gradient(208.2deg, #43434A 3.37%, rgba(28, 28, 35, 0) 93.73%), #151515   
+        box-shadow: 0px 80px 150px rgba(0, 0, 0, 0.5)
+        border-radius: 36px
 
     & h1
-        // @include Roboto300
         font-family: Roboto
         font-weight: 300
         @include adaptiv-font(56, 28)
@@ -20,7 +24,6 @@
         color: #ECECEC
 
     & p
-        // @include Roboto400
         font-family: Roboto
         font-weight: 400
         @include adaptiv-font(22, 11)
@@ -28,12 +31,15 @@
         text-align: center
         margin: 48px 0 64px 0
         color: #A3A3B1
+    & .btns
+        display: flex
+        justify-content: center
+        margin-bottom: 128px
     & .download
         max-width: 233px
         width: 100%
         padding: 12px 0
         border-radius: 3px
-        // @include Roboto700
         font-family: Roboto
         font-weight: 700
         @include adaptiv-font(16, 8)
@@ -43,6 +49,7 @@
         justify-content: center
         color: #151515
         background: #B9E01E
+        margin-right: 32px
         &:hover
             background: #c1dd51
             transition: .5s
@@ -50,7 +57,6 @@
         max-width: 145px
         width: 100%
         border-radius: 3px
-        // @include Roboto700
         font-family: Roboto
         font-weight: 700
         @include adaptiv-font(16, 8)
