--- a/src/styles/style/exploreFeatures.sass
+++ b/src/styles/style/exploreFeatures.sass
@@ -2,19 +2,42 @@
 @import "./main"
 
 .exFeature
-    & .cart
+    max-width: 1280px
+    margin: 0 auto
+    padding: 48px 64px
+    & .wrapper
+        display: grid
+        grid-template-columns: repeat(2, minmax(0, 1fr))
+        gap: 16px
+    & .imgClass
+        max-width: 64px
+        max-height: 64px
+        width: 100%
+        height: 100%
+        margin-right: 32px
+    & .card
         padding: 32px 64px
         border: 1px solid #25252E
         border-radius: 8px
+        & .imgCard
+            display: flex
+            align-items: center
+        & .textCard
+            padding: 16px 0 32px 0
+        & .textbtn a
+            position: relative
+            & span
+                position: absolute
+                right: 24px
+                top: 8px
+                margin-left: 8px
         & h1
-            // @include Roboto300
             font-family: Roboto
             font-weight: 300
             @include adaptiv-font(38, 19)
             line-height: 44px
             color: #ECECEC
         & p
-            // @include Roboto400
             font-family: Roboto
             font-weight: 400
             @include adaptiv-font(18, 9)
@@ -26,7 +49,6 @@
             max-width: 425px
             width: 100%
         & a
-            // @include Roboto700
             font-family: Roboto
             font-weight: 700
             @include adaptiv-font(16, 8)
