--- a/src/styles/style/frame.sass
+++ b/src/styles/style/frame.sass
@@ -1,9 +1,13 @@
 @import "../fonts/fonts"
 @import "./main"
 
+.wrapperFrame
+    background: #1C1C23
+
 .frame
+    max-width: 1280px
     padding: 144px 0 132px 0
-    // background: #1C1C23
+    margin: 0 auto
     & h3
         max-width: 605px
         max-height: 96px
@@ -16,6 +20,9 @@
         text-align: center
         color: #ECECEC
     & .person
+        display: flex
+        justify-content: center
+        align-items: center
         margin-top: 52px
         & img
             width: 64px
