--- a/src/styles/style/main.sass
+++ b/src/styles/style/main.sass
@@ -17,11 +17,19 @@ $cream: #FAFAFA
     margin: 0
     box-sizing: border-box
 
-body
+html, body
     height: 100%
 
 $background: #151515
 
 .main
     background: $background
-    min-height: 100vh
+
+a
+    text-decoration: none
+
+input, label, select 
+    vertical-align: middle
+    display: block
+    -webkit-appearance: none
+    border: none
