--- a/src/styles/style/pricingPlans.sass
+++ b/src/styles/style/pricingPlans.sass
@@ -1,10 +1,14 @@
 @import "../fonts/fonts"
 @import "./main"
 
+.wrapperPricingPlans
+    background: #1C1C23
+
 .pricingPlans
+    max-width: 1280px
+    margin: 0 auto
     padding: 96px 48px 128px 48px
     & h1
-        // @include Roboto300
         font-family: Roboto
         font-weight: 300
         @include adaptiv-font(42, 21)
@@ -12,7 +16,6 @@
         text-align: center
         color: #ECECEC
     & h3
-        // @include Roboto400
         font-family: Roboto
         font-weight: 400
         @include adaptiv-font(22, 11)
@@ -21,18 +24,24 @@
         color: #A3A3B1
         margin: 16px 0 32px 0
     & span
-        // @include Roboto400
         font-family: Roboto
         font-weight: 400
         @include adaptiv-font(14, 7)
         line-height: 20px
         text-align: center
         color: #A3A3B1
+    & .preSwitch
+        display: flex
+        justify-content: center
+        align-items: center
+    & .package
+        display: flex
     & .switch
         display: inline-block
         position: relative
         width: 44px
         height: 24px
+        margin: 0 8px
         & .switchInput
             width: 0
             height: 0
@@ -64,45 +73,83 @@
             transform: translateX(18px)
 
 .packageServices
-    & .classTop
+    display: flex
+    align-items: center
+    margin-top: 32px
+    & .wrapperPackage
+        margin: 0 !important
+    & .name
+        display: flex
+        align-items: center
+    & .tarif
+        display: flex
+        justify-content: space-between
+        align-items: center
+        padding: 1px 0
         & p
-            // @include Roboto400
+            display: flex
+            padding: 6px 0
+        & img
+            margin-right: 8px
+    & .classTopOne, .classTopTwo, .classTopThree
+        margin: 0 8px
+        border-top-left-radius: 1rem
+        border-top-right-radius: 1rem
+        & p
             font-family: Roboto
             font-weight: 400
             @include adaptiv-font(24, 12)
             line-height: 32px
             color: #A3A3B1
         & .price
-            // @include Roboto400
             font-family: Roboto
             font-weight: 400
             @include adaptiv-font(32, 16)
             line-height: 40px
             color: $cream
+            margin-right: 4px
         & .yearOrMonth
-            // @include Roboto400
             font-family: Roboto
             font-weight: 400
             @include adaptiv-font(18, 9)
             line-height: 28px
             color: #A3A3B1
-    & .classBottom
+        & .btn
+            display: flex
+            justify-content: center
+            align-items: center
+    & .classTopOne
+        margin: 0 8px
+        width: 386px
+        height: 120px
+        background: #2F2F3D
+        padding: 32px 64px 16px 64px
+    & .classTopTwo
+        width: 396px
+        height: 144px
+        background: #4D41CB
+        padding: 40px 64px 32px 64px
+    & .classTopThree
+        width: 386px
+        height: 120px
+        background: #2D2763
+        padding: 32px 64px 16px 64px
+    & .classBottomOne, .classBottomTwo, .classBottomThree
+        border-bottom-left-radius: 1rem
+        border-bottom-right-radius: 1rem
+        margin: 0 8px
         & p
-            // @include Roboto400
             font-family: Roboto
             font-weight: 400
             @include adaptiv-font(18, 9)
             line-height: 28px
-            // color: #ECECEC
         & span
-            // @include Roboto400
             font-family: Roboto
             font-weight: 400
             @include adaptiv-font(18, 9)
             line-height: 28px
             color: #C8C4FF
         & button
-            // @include Roboto700
             font-family: Roboto
             font-weight: 700
             @include adaptiv-font(16, 8)
@@ -116,3 +163,19 @@
                 transition: .5s
                 color: #807af1
                 border: 1px solid #807af1
+    & .classBottomOne
+        margin: 0 8px
+        width: 386px
+        height: 644px
+        background: #25252E
+        padding: 16px 44px 0 44px
+    & .classBottomTwo
+        width: 396px
+        height: 668px
+        background: #2F2F3D
+        padding: 32px 48px 32px 48px
+    & .classBottomThree
+        width: 386px
+        height: 644px
+        background: #25252E
+        padding: 16px 44px 0 44px
